First tutorial in Java

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /JavaApplication4/build/
 /TestOne/nbproject/private/
 /TestOne/build/
+/9465_Stefano_tut1/nbproject/private/
+/Stefano_tut1/nbproject/private/
+/Stefano_tut1/build/
