--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /9465_Stefano_tut1/nbproject/private/
 /Stefano_tut1/nbproject/private/
 /Stefano_tut1/build/
+/9465_Stefano_tut1/build/
+/StefanoTutorial2/nbproject/private/
+/9465_Stefano_tut2/nbproject/private/
