Expressions and loops

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 /9465_Stefano_tut1/build/
 /StefanoTutorial2/nbproject/private/
 /9465_Stefano_tut2/nbproject/private/
+/java_Expression/nbproject/private/
+/JavaExpression/nbproject/private/
+/JavaExpression/build/
