--- a/JavaExpression/nbproject/project.properties
+++ b/JavaExpression/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=java_expression.Java_Expression
+main.class=javaExpression.Java_Expression
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
