Classes and Inheritage

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /JavaExpression/nbproject/private/
 /JavaExpression/build/
 /9465_Stefano_tut2/build/
+/Inheritage/nbproject/private/
+/Inheritage/build/
