More about Inheritage and classes

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 /9465_Stefano_tut2/build/
 /Inheritage/nbproject/private/
 /Inheritage/build/
+/9465_Stefano_tut3/nbproject/private/
+/9465_Stefano_tut3/build/
