Tutorial 3, exercises about inheritage and classes

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /Inheritage/build/
 /9465_Stefano_tut3/nbproject/private/
 /9465_Stefano_tut3/build/
+/9465_Stefano_tut3_task3_4/nbproject/private/
+/9465_Stefano_tut3_task3_4/build/
