Interface and Abstract classes

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@
 /9465_Stefano_tut3/build/
 /9465_Stefano_tut3_task3_4/nbproject/private/
 /9465_Stefano_tut3_task3_4/build/
+/9465_Stefano_Pruna_Assessment1/nbproject/private/
+/AbstractClasses/nbproject/private/
+/AbstractClass/nbproject/private/
+/AbstractClass/build/
+/Human/nbproject/private/
+/9465_Stefano_tut4/nbproject/private/
+/9465_Stefano_tut4_task2/nbproject/private/
