Tutorial 4: Interface and Abstract classes

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@
 /Human/nbproject/private/
 /9465_Stefano_tut4/nbproject/private/
 /9465_Stefano_tut4_task2/nbproject/private/
+/Human/build/
+/9465_Stefano_tut4/build/
+/9465_Stefano_tut4_task2/build/
+/9465_Stefano_tut4/dist/
