Fixed classes extention for tutorial 3 and started the assessment 1

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@
 /9465_Stefano_tut4/build/
 /9465_Stefano_tut4_task2/build/
 /9465_Stefano_tut4/dist/
+/9465_Stefano_Pruna_Assessment1/build/
+/Assessment1Test/nbproject/private/
+/Assessment1Test/build/
