Fixed the tutorial

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@
 /9465_Stefano_Pruna_Assessment1/build/
 /Assessment1Test/nbproject/private/
 /Assessment1Test/build/
+/9465_Stefano_Pruna_AssessmentTestOne/nbproject/private/
