--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@
 /Assessment1Test/build/
 /9465_Stefano_Pruna_AssessmentTestOne/nbproject/private/
 /9465_Stefano_tut5/nbproject/private/
+/9465_Stefano_tut6/nbproject/private/
