--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@
 /9465_Stefano_Pruna_AssessmentTestOne/nbproject/private/
 /9465_Stefano_tut5/nbproject/private/
 /9465_Stefano_tut6/nbproject/private/
+/JavaFXLogin/nbproject/private/
+/JavaFXLogin/build/
+/JavaFXCircleCylinder/nbproject/private/
+/JavaFXCircleCylinder/build/
