Started a calculator with GUI

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@
 /JavaFXLogin/build/
 /JavaFXCircleCylinder/nbproject/private/
 /JavaFXCircleCylinder/build/
+/9465_Stefano_Tut7/nbproject/private/
+/9465_Stefano_Tut7/build/
