Calculator in Java, but still with problem

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@
 /JavaFXCircleCylinder/build/
 /9465_Stefano_Tut7/nbproject/private/
 /9465_Stefano_Tut7/build/
+/9465_Stefano_Tutorial7/nbproject/private/
+/9465_Stefano_Tutorial7/build/
