Made more GUI program with buttons

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@
 /9465_Stefano_Tut7/build/
 /9465_Stefano_Tutorial7/nbproject/private/
 /9465_Stefano_Tutorial7/build/
+/JavaFxSwitchScreenContent/nbproject/private/
+/JavaFxSwitchScreenContent/build/
