Try and catch exceptions

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,9 @@
 /9465_Stefano_Tutorial7/build/
 /JavaFxSwitchScreenContent/nbproject/private/
 /JavaFxSwitchScreenContent/build/
+/9465_Stefano_Tut8_task1/nbproject/private/
+/JavaExceptions/nbproject/private/
+/JavaExceptions/build/
+/9465_Stefano_Tut8_task1/build/
+/9465_Stefano_Tut8_Task2/nbproject/private/
+/9465_Stefano_Tut8_Task2/build/
