--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@
 /9465_Stefano_Tut8_task1/build/
 /9465_Stefano_Tut8_Task2/nbproject/private/
 /9465_Stefano_Tut8_Task2/build/
+/9465_Stefano_Pruna_Assessment2/nbproject/private/
+/9465_Stefano_Pruna_Assessment2/build/
