--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@
 /9465_Stefano_Tut8_Task2/build/
 /9465_Stefano_Pruna_Assessment2/nbproject/private/
 /9465_Stefano_Pruna_Assessment2/build/
+/JavaModuleThreads/nbproject/private/
+/JavaModuleThreads/build/
+/JavaThreadsKittens/nbproject/private/
+/JavaThreadsKittens/build/
