Finished the code, deposit and improved GUI left

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@
 /JavaModuleThreads/build/
 /JavaThreadsKittens/nbproject/private/
 /JavaThreadsKittens/build/
+/JavaFXCircleCylinder/dist/
+/9465_Stefano_Pruna_Assessment2/dist/
