--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@
 /JavaThreadsKittens/build/
 /JavaFXCircleCylinder/dist/
 /9465_Stefano_Pruna_Assessment2/dist/
+/readFile/nbproject/private/
+/readFile/build/
